# cxec

./: .0pdd.yml  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: clang-format-check.yml  cmake-build.yml
include/: cxec.hpp
src/: main.cpp
test/: CMakeLists.txt
